Fixed overflow for long user name [ci skip]

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,6 +60,7 @@ p {
 .discussion .small {
     width: 90px;
     text-align: center;
+    overflow: hidden;
 }
 
 .discussion .small a {
